Fixed all question types and questions-progress bar.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,8 +28,12 @@ h1 {
   font-weight: bold;
 }
 
-h3, h4, p, .form-label {
+h2, h3, h4, p, .form-label {
   font-family: "Lato", sans-serif;
+}
+
+.main-content h2 {
+  font-size: 22px;
 }
 
 .form-control {
