--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,64 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="form-container">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
+  <div class="form-header">
+    <h1>PROFIEL BIJWERKEN</h1>
+  </div>
+
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :first_name,
+                label: "Voornaam",
+                required: true,
+                input_html: { autocomplete: "given-name" } %>
+
+    <%= f.input :last_name,
+                label: "Achternaam",
+                required: true,
+                input_html: { autocomplete: "family-name" } %>
+
+    <%= f.input :email,
+                label: "E-mail",
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "email" } %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <p>Bevestiging nog in afwachting voor: <%= resource.unconfirmed_email %></p>
     <% end %>
 
     <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
+                label: "Wachtwoord",
+                hint: "Laat leeg als je het niet wilt wijzigen",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
+
     <%= f.input :password_confirmation,
+                label: "Bevestig wachtwoord",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
+
+    <%= f.input :role, as: :select, label: "Ik ben een", collection: [['Student', 'student'], ['Leraar', 'teacher']], selected: resource.role %>
+
     <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
+                label: "Huidig wachtwoord",
+                hint: "Huidig wachtwoord nodig om wijzigingen te bevestigen",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+
+    <div class="form-actions">
+      <%= f.button :submit, "BIJWERKEN", class: "btn btn-azure btn-form" %>
+    </div>
+
+    <h3 class="mt-5 text-center">Account annuleren</h3>
+
+    <div class="text-center mt-3">
+      Ontevreden? <%= button_to "Account annuleren", registration_path(resource_name), data: { confirm: "Weet je het zeker?", turbo_confirm: "Weet je het zeker?" }, method: :delete, class: "btn btn-danger mx-3" %>
+    </div>
+
+  <% end %>
+
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+</div>
