--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,24 +12,18 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "Dashboard", dashboards_index_path, class: "nav-link" %>
+            <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Cursussen", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to "Voortgang", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Mijn Account", "#", class: "nav-link" %>
+            <%= link_to "Mijn Account", edit_user_registration_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= image_tag "avatar-blue.png", class: "avatar", alt: "dropdown menu" %>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Actie", "#", class: "dropdown-item" %>
-              <%= link_to "Nog een actie", "#", class: "dropdown-item" %>
+              <%#= link_to "Actie", "#", class: "dropdown-item" %>
+              <%#= link_to "Nog een actie", "#", class: "dropdown-item" %>
               <%= link_to "Uitloggen", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
