--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -49,6 +49,19 @@
   margin-top: -20px;
 }
 
+.link-azure {
+  color: #70C9E8;
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  transition: 0.3s ease;
+}
+
+.link-azure:hover {
+  color: #96D8EE;
+}
+
 @media (max-width: 991px) {
   .form-inputs {
     width: 90vw;
