--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,25 @@
-<h2>Forgot your password?</h2>
+<div class="form-container">
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+  <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
+
+  <div class="form-header">
+    <h1>WACHTWOORD VERGETEN</h1>
+  </div>
 
   <div class="form-inputs">
     <%= f.input :email,
+                label: "E-mail",
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" } %>
+
+    <div class="form-actions">
+      <%= f.button :submit, "STUUR INSTRUCTIES", class: "btn btn-azure btn-form" %>
+    </div>
+
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
