Changed incorrect color to neutral yellow.

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -40,4 +40,6 @@ $crimson: #D7263D;
 $cardinal: #BF2237;
 $giants-orange: #F46036;
 $maize: #FFF07C;
+$mustard: #FED766;
+$sunglow: #FECB34;
 $papaya-whip: #FFEFD3;
