--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -62,14 +62,14 @@
 }
 
 .incorrect-answer {
-  background-color: #EC0B43;
-  border-color: #EC0B43;
+  background-color: #FED766;
+  border-color: #FED766;
   color: white;
 }
 
 .incorrect-answer:hover {
-  background-color: #C30938;
-  border-color: #C30938;
+  background-color: #FECB34;
+  border-color: #FECB34;
 }
 
 #dropdownCourseButton {
