Fixed 'Add Course' dropdown. Sorted alphabetically and works every time now.

--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -23,7 +23,7 @@
           <option value="multiple_answer">Multiple Answer</option>
         </select>
 
-        <button type="button" id="add-question-button" class="btn btn-success" data-action="click->course-form#addQuestion">Add Question</button>
+        <button type="button" id="add-question-button" class="btn btn-success" data-action="click->course-form#addQuestion"><i class="fa-solid fa-plus"></i> Add Question</button>
       </div>
 
       <%= f.submit "Create Course", class: "btn btn-primary mb-5" %>
