--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -6,7 +6,7 @@
   <div class="main-content flex-grow-1">
     <h1>Edit Course</h1>
 
-    <%= simple_form_for @course do |f| %>
+    <%= simple_form_for @course, method: :patch do |f| %>
       <%= f.input :title, label: "Course Title", input_html: { class: 'form-control', style: 'max-width: 600px;' } %>
       <%= f.input :description, label: "Course Description", input_html: { maxlength: 250, class: 'form-control', style: 'max-width: 600px;' } %>
 
@@ -57,7 +57,12 @@
         <button type="button" id="add-question-button" class="btn btn-success" data-action="click->course-form#addQuestion"><i class="fa-solid fa-plus"></i> Add Question</button>
       </div>
 
-      <%= f.submit "Update Course", class: "btn btn-primary mb-5" %>
+      <!-- Update and Delete Buttons -->
+      <div class="d-flex gap-3 mb-5">
+        <%= f.submit "Update Course", class: "btn btn-primary" %>
+        <%= button_to 'Delete Course', course_path(@course), method: :delete, data: { confirm: "Are you sure?", turbo: false }, class: 'btn btn-danger' %>
+      </div>
+
     <% end %>
   </div>
 </div>
