--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -31,7 +31,7 @@
                       </a>
                     <% end %>
                   <% elsif question.question_type == 'multiple_answer' %>
-                    <% if attempt.chosen_answers.any? && attempt.chosen_answers.all?(&:correct?) %>
+                    <% if attempt.chosen_answers.map(&:id).sort == question.answers.where(correct: true).pluck(:id).sort %>
                       <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
                         <%= index + 1 %>
                       </a>
