--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -48,7 +48,7 @@
             <% if attempt %>
               <% if question.question_type == 'multiple_answer' %>
                 <!-- Handle multiple answers -->
-                <% if attempt.chosen_answers.any? && attempt.chosen_answers.all?(&:correct?) %>
+                <% if attempt.chosen_answers.map(&:id).sort == question.answers.where(correct: true).pluck(:id).sort %>
                   <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
                     <%= index + 1 %>
                   </a>
