--- a/app/views/courses/my_courses.html.erb
+++ b/app/views/courses/my_courses.html.erb
@@ -64,8 +64,9 @@
             </div>
 
             <!-- Delete button for created courses -->
-            <div class="action-buttons">
-              <%= button_to 'Delete Course', course_path(course), method: :delete, data: { confirm: "Are you sure?", turbo: false }, class: 'btn btn-danger' %>
+            <div class="action-buttons d-flex">
+              <%= link_to 'Edit', edit_course_path(course), class: 'btn btn-primary me-2' %>
+              <%= button_to 'Delete', course_path(course), method: :delete, data: { confirm: "Are you sure you want to delete this course? This action cannot be undone.", turbo: false }, class: 'btn btn-danger' %>
             </div>
           </div>
         </div>
