Fixed up 'Edit Course' form.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,7 @@ h1 {
   font-weight: bold;
 }
 
-h2, h3, h4, p, .form-label {
+h2, h3, h4, p, label, .form-label {
   font-family: "Lato", sans-serif;
 }
 
