--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -6,13 +6,20 @@
   <div class="main-content flex-grow-1">
     <h1>Edit Course</h1>
 
-    <%= simple_form_for @course, method: :patch do |f| %>
-      <%= f.input :title, label: "Course Title", input_html: { class: 'form-control', style: 'max-width: 600px;' } %>
-      <%= f.input :description, label: "Course Description", input_html: { maxlength: 250, class: 'form-control', style: 'max-width: 600px;' } %>
+    <%= form_for @course, method: :patch do |f| %>
+      <div class="form-group">
+        <%= f.label :title, "Course Title" %>
+        <%= f.text_field :title, class: 'form-control mt-2 mb-3', style: 'max-width: 600px;' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :description, "Course Description" %>
+        <%= f.text_area :description, maxlength: 250, rows: 2, class: 'form-control my-2', style: 'max-width: 600px;' %>
+      </div>
 
       <div id="questions-container" data-course-form-target="questionsContainer">
         <!-- Existing questions will be displayed here -->
-        <%= f.simple_fields_for :questions do |question_form| %>
+        <%= f.fields_for :questions do |question_form| %>
           <div class="question-fields mb-4">
             <h4 class="new-question">
               Question <%= question_form.index + 1 %>
@@ -22,31 +29,31 @@
             </h4>
 
             <div class="form-group">
-              <%= question_form.input :content, label: false, input_html: { class: 'form-control', style: 'max-width: 600px;' } %>
+              <%= question_form.text_field :content, class: 'form-control', style: 'max-width: 600px;' %>
             </div>
 
-            <%= question_form.input :question_type, as: :hidden %>
+            <%= question_form.hidden_field :question_type %>
 
             <div class="answers mt-2">
               <% if question_form.object.question_type == 'open_answer' %>
                 <!-- Show only one input field for open_answer questions -->
-                <%= question_form.simple_fields_for :answers do |answer_form| %>
+                <%= question_form.fields_for :answers do |answer_form| %>
                   <% if answer_form.object.correct? %>
                     <div class="form-group">
-                      <%= answer_form.input :content, label: false, input_html: { class: 'form-control', style: 'max-width: 600px;' } %>
+                      <%= answer_form.text_field :content, class: 'form-control', style: 'max-width: 600px;' %>
                       <!-- We ensure there's no checkbox for correct in open_answer -->
                     </div>
                   <% end %>
                 <% end %>
               <% else %>
                 <!-- Display fields for other question types like multiple_choice, true_false, multiple_answer -->
-                <%= question_form.simple_fields_for :answers do |answer_form| %>
+                <%= question_form.fields_for :answers do |answer_form| %>
                   <div class="answer-fields d-flex align-items-center mb-2">
                     <div class="form-group d-flex align-items-center" style="width: 100%;">
-                      <%= answer_form.input :content, label: false, input_html: { class: 'form-control', style: 'max-width: 495px; margin-right: 10px;' } %>
+                      <%= answer_form.text_field :content, class: 'form-control', style: 'max-width: 495px; margin-right: 10px;' %>
                       <div class="form-check">
-                        <%= answer_form.check_box :correct, input_html: { class: 'form-check-input' } %>
-                        <%= answer_form.label :correct, "Correct", class: "form-check-label" %>
+                        <%= answer_form.check_box :correct, class: 'form-check-input multiple-choice-checkbox' %>
+                        <%= answer_form.label :correct, "Correct", class: 'form-check-label' %>
                       </div>
                     </div>
                   </div>
