--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -8,7 +8,11 @@
 
     <%= simple_form_for @course do |f| %>
       <%= f.input :title, label: "Course Title", input_html: { class: 'form-control', style: 'max-width: 600px;' } %>
-      <%= f.input :description, label: "Course Description", input_html: { maxlength: 250, class: 'form-control', style: 'max-width: 600px;' } %>
+      <%= f.input :description,
+            label: "Course Description",
+            as: :text,
+            input_html: { maxlength: 250, rows: 2, class: 'form-control my-2', style: 'max-width: 600px;' } %>
+
 
       <div id="questions-container" data-course-form-target="questionsContainer">
         <!-- This container will hold the dynamically added questions -->
