--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -4,7 +4,7 @@
       <a class="nav-link <%= 'active' if controller_name == 'dashboards' && action_name == 'index' %>" href="<%= dashboard_path %>">Dashboard</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link <%= 'active' if controller_name == 'courses' && action_name == 'index' %>" href="<%= courses_path %>">Course List</a>
+      <a class="nav-link <%= 'active' if controller_name == 'courses' && action_name == 'index' %>" href="<%= courses_path %>">Enrolled Courses</a>
     </li>
     <% if current_user.teacher? %>
       <li class="nav-item">
@@ -13,7 +13,7 @@
     <% end %>
     <% if current_user.teacher? %>
       <li class="nav-item">
-        <a class="nav-link <%= 'active' if controller_name == 'courses' && action_name == 'new' %>" href="<%= new_course_path %>">Create New Course</a>
+        <a class="nav-link <%= 'active' if controller_name == 'courses' && action_name == 'new' %>" href="<%= new_course_path %>">New Course</a>
       </li>
     <% end %>
   </ul>
