Added 'Recent Courses' list and course timer.

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -26,6 +26,7 @@ $UN-blue: #5A8FCB;
 $steel-blue: #4580C4;
 $pine-green: #136F63;
 $brunswick-green: #0F574E;
+$dark-green: #09342f;
 $emerald: #6CC680;
 $emerald-dark: #4FBA66;
 $spring-green: #35FF69;
