--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,9 @@
 @import "components/index";
 @import "pages/index";
 
+// Tom Select
+@import url('https://cdn.jsdelivr.net/npm/tom-select@latest/dist/css/tom-select.default.min.css');
+
 body {
   background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('/assets/banner-annie-spratt.jpg');
   background-size: cover;
