--- a/app/assets/stylesheets/pages/_question.scss
+++ b/app/assets/stylesheets/pages/_question.scss
@@ -40,6 +40,11 @@
   width: 80%;
 }
 
+.question-image {
+  width: 100%;
+  max-width: 1000px;
+}
+
 .progress-box {
   // background-color: white;
   // border-radius: 18px;
