--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -6,7 +6,7 @@
   <div class="main-content flex-grow-1">
     <h1>Create a New Course</h1>
 
-    <%= simple_form_for @course, html: { data: { turbo: false } } do |f| %>
+    <%= simple_form_for @course, html: { multipart: true, data: { turbo: false } } do |f| %>
       <%= f.input :title, label: "Course Title", input_html: { class: 'form-control', style: 'max-width: 600px;' } %>
       <%= f.input :description,
             label: "Course Description",
