--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -2,11 +2,16 @@
   <!-- Sidebar -->
   <%= render 'shared/sidebar' %>
 
+  <!-- Flash messages for validation errors -->
+  <div id="flash-messages">
+    <%= render 'shared/flashes' %>
+  </div>
+
   <!-- Main Content -->
   <div class="main-content flex-grow-1">
     <h1>Create a New Course</h1>
 
-    <%= simple_form_for @course, html: { multipart: true, data: { turbo: false } } do |f| %>
+    <%= simple_form_for @course, html: { multipart: true, data: { turbo: true } } do |f| %>
       <%= f.input :title, label: "Course Title", input_html: { class: 'form-control', style: 'max-width: 600px;' } %>
       <%= f.input :description,
             label: "Course Description",
