--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -8,7 +8,12 @@
     </li>
     <% if current_user.teacher? %>
       <li class="nav-item">
-        <a class="nav-link <%= 'active' if controller_name == 'dashboards' && action_name == 'my_groups' %>" href="<%= dashboard_my_groups_path %>">Mijn Groepen</a> 
+        <a class="nav-link <%= 'active' if controller_name == 'dashboards' && action_name == 'my_groups' %>" href="<%= dashboard_my_groups_path %>">Mijn Groepen</a>
+      </li>
+    <% end %>
+    <% if current_user.teacher? %>
+      <li class="nav-item">
+        <a class="nav-link <%= 'active' if controller_name == 'groups' && action_name == 'new' %>" href="<%= new_group_path %>">New Group</a>
       </li>
     <% end %>
     <% if current_user.teacher? %>
