--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,7 @@ h1 {
   font-weight: bold;
 }
 
-h2, h3, h4, p, label, .form-label {
+h2, h3, h4, p, li, label, .form-label {
   font-family: "Lato", sans-serif;
 }
 
