--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,4 +1,5 @@
 <div class="dashboard-container d-flex">
+
   <!-- Sidebar -->
   <%= render 'shared/sidebar' %>
 
@@ -7,24 +8,24 @@
     <h1>Create a New Group</h1>
 
     <%= simple_form_for @group do |f| %>
-      <div class="field">
-        <%= f.input :name, label: "Group Name" %>
+      <div class="field group-form-control">
+        <%= f.input :name, label: "Group name", required: true %> <!-- Added 'required: true' -->
       </div>
 
       <div class="field">
-        <%= f.label "Add Students to the Group" %>
+        <%= f.label "Add students to the Group:" %>
 
-        <%= select_tag "student", options_from_collection_for_select(User.students, "id", "full_name"), include_blank: "Select a Student", data: { action: "change->add-members#addMember" } %>
+        <%= select_tag "student", options_from_collection_for_select(User.students, "id", "full_name"), include_blank: "Select a student", data: { action: "change->add-members#addMember" }, class: "group-select" %>
 
         <div id="selected-members" class="mt-3">
-          <h4>Group Members:</h4>
+          <label>Group members:</label>
           <ul id="members-list" data-add-members-target="list">
             <!-- Dynamically added members will appear here -->
           </ul>
+          <%= f.submit "Create Group", class: "btn btn-primary mt-3 mb-5", disabled: true, id: "submit-group" %> <!-- Disabled initially -->
         </div>
       </div>
 
-      <%= f.submit "Create Group", class: "btn btn-primary mb-5" %>
     <% end %>
   </div>
 </div>
