--- a/app/assets/stylesheets/pages/_group.scss
+++ b/app/assets/stylesheets/pages/_group.scss
@@ -8,18 +8,16 @@
   padding: 8px 4px;
 }
 
-#selected-members {
-  display: none;
+.student-list {
+  max-width: 400px;
 }
 
-.member-item {
+.list-group-item {
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
-  max-width: 300px !important;
 }
 
-.student-name {
-  flex-grow: 1; 
-  margin-right: 10px; 
+.student-checkbox {
+  cursor: pointer;
 }
