--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,31 +1,38 @@
 <div class="dashboard-container d-flex">
-
   <!-- Sidebar -->
   <%= render 'shared/sidebar' %>
 
+  <!-- Flash messages for validation errors -->
+  <div id="flash-messages">
+    <%= render 'shared/flashes' %>
+  </div>
+
   <!-- Main Content -->
-  <div class="main-content flex-grow-1" data-controller="add-members">
+  <div class="main-content flex-grow-1">
     <h1>Create a New Group</h1>
 
-    <%= simple_form_for @group do |f| %>
+    <%= simple_form_for @group, data: { turbo: true } do |f| %>
       <div class="field group-form-control">
-        <%= f.input :name, label: "Group name", required: true %> <!-- Added 'required: true' -->
+        <%= f.input :name, label: "Group name", required: true %>
       </div>
 
       <div class="field">
-        <%= f.label "Add students to the Group:" %>
+        <%= f.label "Select students to add to the Group:" %>
 
-        <%= select_tag "student", options_from_collection_for_select(User.students, "id", "full_name"), include_blank: "Select a student", data: { action: "change->add-members#addMember" }, class: "group-select" %>
-
-        <div id="selected-members" class="mt-3">
-          <label>Group members:</label>
-          <ul id="members-list" data-add-members-target="list">
-            <!-- Dynamically added members will appear here -->
+        <!-- List all students with checkboxes -->
+        <div class="student-list mt-3">
+          <ul class="list-group">
+            <% User.students.each do |student| %>
+              <li class="list-group-item">
+                <span><%= student.full_name %></span>
+                <%= check_box_tag "group[student_ids][]", student.id, false, class: "student-checkbox" %>
+              </li>
+            <% end %>
           </ul>
-          <%= f.submit "Create Group", class: "btn btn-primary mt-3 mb-5", disabled: true, id: "submit-group" %> <!-- Disabled initially -->
         </div>
       </div>
 
+      <%= f.submit "Create Group", class: "btn btn-primary mt-4 mb-5", id: "submit-group" %>
     <% end %>
   </div>
 </div>
